api-gateway-mariadb/k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-proxy-rs-deployment
  namespace: part-rde
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-proxy-rs
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: b895d0221f83ecc3400b989ca45dc271
      labels:
        app: kube-proxy-rs
    spec:
      imagePullSecrets:
      - name: harbor-registry-secret
      containers:
      - name: kube-proxy-rs
        image: amdp-registry.skamdp.org/mydev-ywyi/kube-proxy-rs:1.0.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
